--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,14 @@
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
+          <groupId>MyJenkinsproject</groupId>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
+          <configuration>
+            <server>war-deployment-to-tomcat</server>
+            <url>http://54.198.82.45:8080</url>
+            <path>/Sagore-Maven-Project</path>
+          </configuration>
         </plugin>
         <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
         <plugin>
